fix splash display on mobile landscape

--- a/source/scss/general.scss
+++ b/source/scss/general.scss
@@ -79,6 +79,7 @@ input {
     height: 100%;
     @include anim-bg();
     transition: opacity 0.3s ease;
+    overflow: hidden;
     .loading-logo {
       display: block;
       width: 50%;
@@ -106,11 +107,12 @@ input {
   height: ($splash-aspect-h/$splash-aspect-w)*100vw; /* height:width ratio */
   max-height: 100vh;
   max-width: ($splash-aspect-w/$splash-aspect-h)*100vh; /* height:width ratio */
-  margin: auto;
+  margin: 0 auto;
   position: absolute;
   top:0;bottom:0; /* vertical center */
   left:0;right:0; /* horizontal center */
   overflow: hidden;
+  padding: 15px;
 }
 #skip-it {
   background: none;
